argocd/istio-demo/redis-queue/deployment.yaml
apiVersion:  apps/v1
kind: Deployment
metadata:
  labels:
    app: microservice-app-example
  name: redis-queue
spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis-queue
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: microservice-app-example
        service: redis-queue
    spec:
      containers:
      - env:
        image: redis
        name: redis-queue
        ports:
        - containerPort: 6379
      restartPolicy: Always
