argocd/istio-demo/redis-queue/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: microservice-app-example
    version: v1
  name: redis-queue
spec:
  ports:
  - port: 6379
  selector:
    service: redis-queue
